@@ -21,40 +21,29 @@ public class SearchService {
 
     @Autowired
     private PostRepository postRepository;
-
     @Autowired
     private UserRepository userRepository;
-
     @Autowired
     private TextEmbeddingService textEmbeddingService;
-
     @Autowired
     private TagNormalizationService tagNormalizationService;
 
     public Page<PostSummary> searchPostsByText(String query, Pageable pageable, User currentUser) {
         if (query == null || query.trim().isEmpty()) {
-            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+            return Page.empty(pageable);
         }
-        List<Float> embeddingList = textEmbeddingService.embed(query.trim());
-
-        float[] embeddingArray = new float[embeddingList.size()];
-        for (int i = 0; i < embeddingList.size(); i++) {
-            embeddingArray[i] = embeddingList.get(i);
-        }
-
-        Page<Integer> postIdsPage = postRepository.findPostIdsBySemanticSimilarity(embeddingArray, pageable);
+        float[] embedding = toFloatArray(textEmbeddingService.embed(query.trim()));
+        Page<Integer> postIdsPage = postRepository.findPostIdsBySemanticSimilarity(embedding, pageable);
         return buildPostSummaryPageFromIds(postIdsPage, pageable, currentUser);
     }
 
     public Page<PostSummary> searchPostsByTag(String tagInput, Pageable pageable, User currentUser) {
         if (tagInput == null || tagInput.trim().isEmpty()) {
-            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+            return Page.empty(pageable);
         }
-        // split on whitespace and normalize
-        List<String> rawTags = Arrays.asList(tagInput.trim().split("\\s+"));
-        Set<String> normalizedTags = tagNormalizationService.normalizeTags(rawTags);
+        Set<String> normalizedTags = normalizeTags(tagInput);
         if (normalizedTags.isEmpty()) {
-            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+            return Page.empty(pageable);
         }
         Page<Integer> postIdsPage = postRepository.findPostIdsByAnyTag(normalizedTags, pageable);
         return buildPostSummaryPageFromIds(postIdsPage, pageable, currentUser);
@@ -62,88 +51,73 @@ public class SearchService {
 
     public Page<PostSummary> searchPostsHybrid(String query, String tagInput, Pageable pageable, User currentUser) {
         if (query == null || query.trim().isEmpty() || tagInput == null || tagInput.trim().isEmpty()) {
-            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+            return Page.empty(pageable);
         }
-        List<Float> embeddingList = textEmbeddingService.embed(query.trim());
-        float[] embeddingArray = new float[embeddingList.size()];
-        for (int i = 0; i < embeddingList.size(); i++) {
-            embeddingArray[i] = embeddingList.get(i);
-        }
-        List<String> rawTags = Arrays.asList(tagInput.trim().split("\\s+"));
-        Set<String> normalizedTags = tagNormalizationService.normalizeTags(rawTags);
+        float[] embedding = toFloatArray(textEmbeddingService.embed(query.trim()));
+        Set<String> normalizedTags = normalizeTags(tagInput);
         if (normalizedTags.isEmpty()) {
-            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+            return Page.empty(pageable);
         }
-        Page<Integer> postIdsPage = postRepository.findPostIdsByHybridAnyTags(embeddingArray, normalizedTags, pageable);
+        Page<Integer> postIdsPage = postRepository.findPostIdsByHybridAnyTags(embedding, normalizedTags, pageable);
         return buildPostSummaryPageFromIds(postIdsPage, pageable, currentUser);
     }
 
-    private Page<PostSummary> buildPostSummaryPageFromIds(Page<Integer> postIdsPage, Pageable pageable, User currentUser) {
-        List<Integer> postIds = postIdsPage.getContent();
-        if (postIds.isEmpty()) {
-            return new PageImpl<>(Collections.emptyList(), pageable, postIdsPage.getTotalElements());
-        }
-
-        List<Post> posts = postRepository.findByPostIdInWithDetails(postIds);
-        Map<Integer, Post> postMap = posts.stream().collect(Collectors.toMap(Post::getPostId, p -> p));
-
-        List<Post> orderedPosts = postIds.stream()
-                .map(postMap::get)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-
-        Map<Integer, Long> likeCounts = loadLikeCounts(postIds);
-        Set<Integer> likedSet = currentUser != null ? loadLikedIds(postIds, currentUser.getUserId()) : Set.of();
-        Set<Integer> savedSet = currentUser != null ? loadSavedIds(postIds, currentUser.getUserId()) : Set.of();
-        Set<Integer> followedAuthors = currentUser != null ? loadFollowedAuthors(orderedPosts, currentUser) : Set.of();
-
-        List<PostSummary> summaries = orderedPosts.stream().map(post -> {
-            User author = post.getUser();
-            boolean followingAuthor = author != null && followedAuthors.contains(author.getUserId());
-            boolean hasLiked = likedSet.contains(post.getPostId());
-            boolean hasSaved = savedSet.contains(post.getPostId());
-            long likeCount = likeCounts.getOrDefault(post.getPostId(), 0L);
-
-            return toPostSummaryDto(post, hasLiked, hasSaved, followingAuthor, likeCount);
-        }).collect(Collectors.toList());
-
-        return new PageImpl<>(summaries, pageable, postIdsPage.getTotalElements());
-    }
-
-    // ===================== USER SEARCH =====================
-    public Page<UserSearchResult> searchUsers(String query, boolean mechanicOnly, Pageable pageable) {
+    public Page<UserSearchResult> searchUsers(String query, boolean mechanicOnly, Pageable pageable, User currentUser) {
         if (query == null || query.trim().isEmpty()) {
-            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+            return Page.empty(pageable);
         }
-
         Page<User> userPage = userRepository.searchUsersPaged(query.trim(), mechanicOnly, pageable);
-
         List<UserSearchResult> results = userPage.getContent().stream()
-                .map(u -> new UserSearchResult(
-                        u.getUserId(),
-                        u.getName(),
-                        u.getProfilePic(),
-                        u.getUserRoles() != null && Boolean.TRUE.equals(u.getUserRoles().getIsMechanic())
-                ))
+                .map(u -> buildUserSearchResult(u, currentUser))
                 .collect(Collectors.toList());
-
         return new PageImpl<>(results, pageable, userPage.getTotalElements());
     }
 
-    // ===================== PRIVATE HELPERS =====================
+    /** Converts OpenAI embedding (List<Float>) to primitive float[] required by pgvector queries */
+    private float[] toFloatArray(List<Float> list) {
+        float[] array = new float[list.size()];
+        for (int i = 0; i < list.size(); i++) {
+            array[i] = list.get(i);
+        }
+        return array;
+    }
+
+    private Set<String> normalizeTags(String input) {
+        List<String> rawTags = Arrays.asList(input.trim().split("\\s+"));
+        return tagNormalizationService.normalizeTags(rawTags);
+    }
+
+    /** Builds a single UserSearchResult, correctly handling authenticated vs guest users */
+    private UserSearchResult buildUserSearchResult(User user, User currentUser) {
+        boolean isFollowing = false;
+        if (currentUser != null) {
+            List<Integer> followed = userRepository.findFollowedAuthorIds(
+                    currentUser.getUserId(), List.of(user.getUserId()));
+            isFollowing = !followed.isEmpty();
+        }
+        return new UserSearchResult(
+                user.getUserId(),
+                user.getName(),
+                user.getProfilePic(),
+                user.getUserRoles() != null && Boolean.TRUE.equals(user.getUserRoles().getIsMechanic()),
+                isFollowing
+        );
+    }
+
     private Map<Integer, Long> loadLikeCounts(List<Integer> postIds) {
         List<Object[]> raw = postRepository.findLikeCountsByPostIds(postIds);
-        return raw.stream().collect(Collectors.toMap(o -> (Integer) o[0], o -> (Long) o[1]));
+        return raw.stream().collect(Collectors.toMap(
+                o -> (Integer) o[0],
+                o -> (Long) o[1]
+        ));
     }
 
     private Set<Integer> loadLikedIds(List<Integer> postIds, Integer userId) {
-        List<Integer> ids = postRepository.findLikedPostIdsForUser(postIds, userId);
-        return new HashSet<>(ids);
+        return new HashSet<>(postRepository.findLikedPostIdsForUser(postIds, userId));
     }
 
     private Set<Integer> loadSavedIds(List<Integer> postIds, Integer userId) {
-        List<Integer> ids = postRepository.findSavedPostIdsForUser(postIds, userId);
-        return new HashSet<>(ids);
+        return new HashSet<>(postRepository.findSavedPostIdsForUser(postIds, userId));
     }
 
     private Set<Integer> loadFollowedAuthors(List<Post> posts, User currentUser) {
@@ -151,7 +125,7 @@ public class SearchService {
                 .map(p -> p.getUser() != null ? p.getUser().getUserId() : null)
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         if (authorIds.isEmpty()) return Set.of();
         List<Integer> followed = userRepository.findFollowedAuthorIds(currentUser.getUserId(), authorIds);
         return new HashSet<>(followed);
@@ -160,32 +134,72 @@ public class SearchService {
     private PostSummary toPostSummaryDto(Post p, boolean hasLiked, boolean hasSaved, boolean followingAuthor, long likeCount) {
         PostSummary summary = new PostSummary();
         User author = p.getUser();
-
         if (author != null) {
             summary.setAuthorId(author.getUserId());
             summary.setCreatedBy(author.getName());
             summary.setCreatedByProfilePicUrl(author.getProfilePic());
-            summary.setAuthorIsMechanic(author.getUserRoles() != null && Boolean.TRUE.equals(author.getUserRoles().getIsMechanic()));
+            summary.setAuthorIsMechanic(
+                    author.getUserRoles() != null && Boolean.TRUE.equals(author.getUserRoles().getIsMechanic()));
         } else {
             summary.setAuthorId(null);
             summary.setCreatedBy(null);
             summary.setCreatedByProfilePicUrl(null);
             summary.setAuthorIsMechanic(false);
         }
-
         summary.setPostId(p.getPostId());
         summary.setDescription(p.getDescription());
         summary.setCreatedAt(p.getCreatedAt());
         summary.setLikeCount(Math.toIntExact(likeCount));
-
         List<String> imageUrls = p.getImages().stream()
                 .map(PostImage::getImageUrl)
                 .collect(Collectors.toList());
         summary.setImageUrls(imageUrls);
-
         summary.setHasLiked(hasLiked);
         summary.setHasSaved(hasSaved);
         summary.setFollowingAuthor(followingAuthor);
         return summary;
+    }
+
+    /**
+     * core builder used by all post searches
+     * guest is handled differently than authenticated user
+     */
+    private Page<PostSummary> buildPostSummaryPageFromIds(Page<Integer> postIdsPage, Pageable pageable, User currentUser) {
+        List<Integer> postIds = postIdsPage.getContent();
+        if (postIds.isEmpty()) {
+            return Page.empty(pageable);
+        }
+        List<Post> posts = postRepository.findByPostIdInWithDetails(postIds);
+        Map<Integer, Post> postMap = posts.stream()
+                .collect(Collectors.toMap(Post::getPostId, p -> p));
+        List<Post> orderedPosts = postIds.stream()
+                .map(postMap::get)
+                .filter(Objects::nonNull)
+                .toList();
+        Map<Integer, Long> likeCounts = loadLikeCounts(postIds);
+
+        // authenticated user
+        Set<Integer> likedSet = currentUser != null
+                ? loadLikedIds(postIds, currentUser.getUserId())
+                : Set.of();
+
+        Set<Integer> savedSet = currentUser != null
+                ? loadSavedIds(postIds, currentUser.getUserId())
+                : Set.of();
+
+        Set<Integer> followedAuthors = currentUser != null
+                ? loadFollowedAuthors(orderedPosts, currentUser)
+                : Set.of();
+
+        List<PostSummary> summaries = orderedPosts.stream().map(post -> {
+            User author = post.getUser();
+            boolean followingAuthor = author != null && followedAuthors.contains(author.getUserId());
+            boolean hasLiked = likedSet.contains(post.getPostId());
+            boolean hasSaved = savedSet.contains(post.getPostId());
+            long likeCount = likeCounts.getOrDefault(post.getPostId(), 0L);
+
+            return toPostSummaryDto(post, hasLiked, hasSaved, followingAuthor, likeCount); }).collect(Collectors.toList());
+
+        return new PageImpl<>(summaries, pageable, postIdsPage.getTotalElements());
     }
 }
